# lv_font_conv

./: .gitignore  CMakeLists.txt  README.en.md  README.md  main.cpp  zHan-all.txt  zHan-commonUse.txt
include/: Btemplate.hpp  ConsoleBar.h  Conver.h  Ctemplate.hpp  File.h  Param.h  TrueTypeFont.h
source/: CMakeLists.txt  ConsoleBar.cpp  Conver.cpp  Param.cpp  TrueTypeFont.cpp
src/: CMakeLists.txt  ConsoleBar.cpp  Conver.cpp  File.cpp  Param.cpp  TrueTypeFont.cpp
